add basic html form

--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     </head>
 
     <body>
-
+        <form action="learnphp.php" method="post">
+            <table border="0">
+                <tr>
+                    <td>Name</td>
+                    <td align="center">
+                        <input type="text" name="username" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>Address</td>
+                    <td align="center">
+                        <input type="text" name="streetaddress" size="30" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>City</td>
+                    <td align="center">
+                        <input type="text" name="cityaddress" size="30" />
+                    </td>
+                </tr>
+            </table>
+        </form>
     </body>
 </html>
