--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <tr>
                     <td>Name</td>
                     <td align="center">
-                        <input type="text" name="username" />
+                        <input type="text" name="username" size="30" />
                     </td>
                 </tr>
                 <tr>
@@ -25,6 +25,9 @@
                     <td align="center">
                         <input type="text" name="cityaddress" size="30" />
                     </td>
+                </tr>
+                <tr>
+                    <td colspan="2" align="center"><input type="submit" value="Submit"/></td>
                 </tr>
             </table>
         </form>
